# hakai-salish-sea-cast-tools

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: generate_wepsite.yaml
docs/: index.md  oceanography.md  sentinels.md
hakai_salish_sea_model_tools/: salishseacast.py
notebooks/: sog_surface_temp_animation.ipynb
oceanography/: index.html  sog_surface_temp_animation.ipynb  test.nc
search/: search_index.json
sentinels/: LTNlatlong.xlsx  get_nemo_nodes.py  index.html  nemo_stations.csv  sentinels.html
tests/: test_sealishseacast.py
